vlib/v/checker/tests/break_anon_fn_err.vv
fn main() {
	for true {
		_ := fn () int {
			break
			return 3
		}()
	}
}
